--- a/api/package.json
+++ b/api/package.json
@@ -17,20 +17,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@eslint/js": "^9.17.0",
     "@trpc/server": "11.0.0-rc.700",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.4",
+    "eslint": "^9.17.0",
     "express": "^4.21.2",
-    "morgan": "^1.10.0",
+    "globals": "^15.14.0",
+    "pg": "^8.13.1",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "superjson": "catalog:",
-    "tsx": "^4.19.2",
+    "typescript-eslint": "^8.18.2",
     "zod": "catalog:"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/morgan": "^1.9.9",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.30.2",
+    "tsx": "^4.19.2",
     "typescript": "catalog:"
   }
 }
