--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,8 @@
     }
   },
   "scripts": {
-    "dev": "tsx watch src"
+    "dev": "tsx watch src",
+    "drizzle-kit": "npx drizzle-kit"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
+    "drizzle-zod": "^0.6.1",
     "eslint": "^9.17.0",
     "express": "^4.21.2",
     "globals": "^15.14.0",
