--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,8 @@
     }
   },
   "scripts": {
+    "start": "NODE_ENV=production node dist/index.js",
+    "build": "tsc",
     "dev": "tsx watch src",
     "drizzle-kit": "npx drizzle-kit"
   },
