--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "Full-Stack-React-Node-CRUD",
   "version": "1.0.0",
-  "description": "",
+  "engines": {
+    "node": ">=20.18.1",
+    "pnpm": "^9.14.2"
+  },
+  "packageManager": "pnpm@9.14.2",
   "scripts": {
     "dev": "concurrently \"pnpm --filter @rn-crud/api run dev\" \"pnpm --filter @rn-crud/web run dev\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "prettier": "^3.4.2"
   },
