--- a/web/package.json
+++ b/web/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "tailwindcss": "^3.4.17",
     "typescript": "catalog:",
     "typescript-eslint": "^8.18.2",
